####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = pvcasio

## INCLUDES were found outside kdevelop specific part

pvcasio_SOURCES = serialexception.cpp serial.cpp pvtodo.cpp pvschedule.cpp pvreminder.cpp pvquickmemo.cpp pvpocketsheet.cpp pvmultidate.cpp pvmemo.cpp pvexpense.cpp pvdataentryexception.cpp pvcontact.cpp protocolexception.cpp protocol.cpp casiopvexception.cpp casiopv.cpp baseexception.cpp main.cpp 
pvcasio_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp baseexception.cpp baseexception.h casiopv.cpp casiopv.h casiopvexception.cpp casiopvexception.h FieldCode.h ModeCode.h protocol.cpp protocol.h protocolexception.cpp protocolexception.h pvcontact.cpp pvcontact.h pvdataentry.h pvdataentryexception.cpp pvdataentryexception.h pvexpense.cpp pvexpense.h pvmemo.cpp pvmemo.h pvmultidate.cpp pvmultidate.h pvpocketsheet.cpp pvpocketsheet.h pvquickmemo.cpp pvquickmemo.h pvreminder.cpp pvreminder.h pvschedule.cpp pvschedule.h pvtodo.cpp pvtodo.h serial.cpp serial.h serialexception.cpp serialexception.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
pvcasio_LDFLAGS = $(all_libraries) 
                                                                                
